{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 275,
  "lineage": "22b41f91-40d3-8a3a-a324-ab9df50930d2",
  "resources": [
    {
      "module": "module.compute-stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "data-ec2-jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9354388bb36c088",
            "arn": "arn:aws:ec2:eu-central-1:682396138567:instance/i-08dfab4e9af06f2ad",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08dfab4e9af06f2ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "exam_rsa.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01c7e09ff54a86c69",
            "private_dns": "ip-192-168-1-142.eu-central-1.compute.internal",
            "private_ip": "192.168.1.142",
            "public_ip": "3.120.133.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-029ef49c132de8138",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0773ff35b682de818",
            "tags": {
              "Name": "kgk-EC2-jumphost"
            },
            "tags_all": {
              "Name": "kgk-EC2-jumphost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00db67ede6e6f72eb"
            ]
          },
          "dependencies": [
            "module.compute-stack.aws_key_pair.public_key",
            "module.compute-stack.aws_security_group.kgk-SG",
            "module.network-stack.aws_subnet.kgk-PUBLIC"
          ]
        }
      ]
    },
    {
      "module": "module.compute-stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "data-ec2-m01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9354388bb36c088",
            "arn": "arn:aws:ec2:eu-central-1:682396138567:instance/i-0a30ce6563bc923ed",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a30ce6563bc923ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "exam_rsa.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08da8e4dcc41a379f",
            "private_dns": "ip-192-168-2-166.eu-central-1.compute.internal",
            "private_ip": "192.168.2.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d8e92e51e3a214b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7425674a1132f5c",
            "tags": {
              "Name": "kgk-EC2-master-01"
            },
            "tags_all": {
              "Name": "kgk-EC2-master-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0164e4d8cee19d7f1"
            ]
          },
          "dependencies": [
            "module.compute-stack.aws_key_pair.public_key",
            "module.compute-stack.aws_security_group.kgk-SG-private",
            "module.network-stack.aws_subnet.kgk-PRIVATE",
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.compute-stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "data-ec2-w01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9354388bb36c088",
            "arn": "arn:aws:ec2:eu-central-1:682396138567:instance/i-04800035ac1fef38c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04800035ac1fef38c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "exam_rsa.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-047d728ce623d5559",
            "private_dns": "ip-192-168-2-137.eu-central-1.compute.internal",
            "private_ip": "192.168.2.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03d66e60491d6cce4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7425674a1132f5c",
            "tags": {
              "Name": "kgk-EC2-worker-01"
            },
            "tags_all": {
              "Name": "kgk-EC2-worker-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0164e4d8cee19d7f1"
            ]
          },
          "dependencies": [
            "module.compute-stack.aws_key_pair.public_key",
            "module.compute-stack.aws_security_group.kgk-SG-private",
            "module.network-stack.aws_subnet.kgk-PRIVATE",
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.compute-stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "data-ec2-w02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9354388bb36c088",
            "arn": "arn:aws:ec2:eu-central-1:682396138567:instance/i-024acc9fc9308caa2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024acc9fc9308caa2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "exam_rsa.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a37e33f42e48932d",
            "private_dns": "ip-192-168-2-177.eu-central-1.compute.internal",
            "private_ip": "192.168.2.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02118593980bc7613",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7425674a1132f5c",
            "tags": {
              "Name": "kgk-EC2-worker-02"
            },
            "tags_all": {
              "Name": "kgk-EC2-worker-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0164e4d8cee19d7f1"
            ]
          },
          "dependencies": [
            "module.compute-stack.aws_key_pair.public_key",
            "module.compute-stack.aws_security_group.kgk-SG-private",
            "module.network-stack.aws_subnet.kgk-PRIVATE",
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.compute-stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kgk-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682396138567:security-group/sg-00db67ede6e6f72eb",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00db67ede6e6f72eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_myservices",
            "name_prefix": "",
            "owner_id": "682396138567",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kgk-SG"
            },
            "tags_all": {
              "Name": "kgk-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd973cf4e435e155"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.compute-stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kgk-SG-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682396138567:security-group/sg-0164e4d8cee19d7f1",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0164e4d8cee19d7f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_myservices-private",
            "name_prefix": "",
            "owner_id": "682396138567",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kgk-SG-private"
            },
            "tags_all": {
              "Name": "kgk-SG-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd973cf4e435e155"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack",
      "mode": "managed",
      "type": "aws_eip",
      "name": "kgk-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072f714900be2753a",
            "association_id": "eipassoc-03b89419d387a7536",
            "domain": "vpc",
            "id": "eipalloc-072f714900be2753a",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-01d694dc1edc5d6cc",
            "private_dns": "ip-192-168-1-157.eu-central-1.compute.internal",
            "private_ip": "192.168.1.157",
            "public_dns": "ec2-52-29-149-211.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.149.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kgk-EIP"
            },
            "tags_all": {
              "Name": "kgk-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network-stack",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kgk-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682396138567:internet-gateway/igw-001ee426ae3df661f",
            "id": "igw-001ee426ae3df661f",
            "owner_id": "682396138567",
            "tags": {
              "Name": "kgk-IGW"
            },
            "tags_all": {
              "Name": "kgk-IGW"
            },
            "vpc_id": "vpc-0fd973cf4e435e155"
          },
          "dependencies": [
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "kgk-NGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072f714900be2753a",
            "connectivity_type": "public",
            "id": "nat-0aa6152af73d674f7",
            "network_interface_id": "eni-01d694dc1edc5d6cc",
            "private_ip": "192.168.1.157",
            "public_ip": "52.29.149.211",
            "subnet_id": "subnet-0773ff35b682de818",
            "tags": {
              "Name": "kgk-NGW"
            },
            "tags_all": {
              "Name": "kgk-NGW"
            }
          },
          "dependencies": [
            "module.network-stack.aws_eip.kgk-EIP",
            "module.network-stack.aws_subnet.kgk-PUBLIC",
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kgk-PRIVATE-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682396138567:route-table/rtb-0ff12e65e5d107188",
            "id": "rtb-0ff12e65e5d107188",
            "owner_id": "682396138567",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aa6152af73d674f7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kgk-PRIVE-RT"
            },
            "tags_all": {
              "Name": "kgk-PRIVE-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd973cf4e435e155"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-stack.aws_eip.kgk-EIP",
            "module.network-stack.aws_nat_gateway.kgk-NGW",
            "module.network-stack.aws_subnet.kgk-PUBLIC",
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kgk-PUBLIC-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682396138567:route-table/rtb-005c71513607405a4",
            "id": "rtb-005c71513607405a4",
            "owner_id": "682396138567",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001ee426ae3df661f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kgk-PUB-RT"
            },
            "tags_all": {
              "Name": "kgk-PUB-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd973cf4e435e155"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-stack.aws_internet_gateway.kgk-IGW",
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRIVE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044b75a537fe23dcc",
            "route_table_id": "rtb-0ff12e65e5d107188",
            "subnet_id": "subnet-0e7425674a1132f5c"
          },
          "dependencies": [
            "module.network-stack.aws_eip.kgk-EIP",
            "module.network-stack.aws_nat_gateway.kgk-NGW",
            "module.network-stack.aws_route_table.kgk-PRIVATE-RT",
            "module.network-stack.aws_subnet.kgk-PRIVATE",
            "module.network-stack.aws_subnet.kgk-PUBLIC",
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ce012497e36b96e",
            "route_table_id": "rtb-005c71513607405a4",
            "subnet_id": "subnet-0773ff35b682de818"
          },
          "dependencies": [
            "module.network-stack.aws_internet_gateway.kgk-IGW",
            "module.network-stack.aws_route_table.kgk-PUBLIC-RT",
            "module.network-stack.aws_subnet.kgk-PUBLIC",
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kgk-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682396138567:subnet/subnet-0e7425674a1132f5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7425674a1132f5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682396138567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kgk-PRIVATE"
            },
            "tags_all": {
              "Name": "kgk-PRIVATE"
            },
            "vpc_id": "vpc-0fd973cf4e435e155"
          },
          "dependencies": [
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kgk-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682396138567:subnet/subnet-0773ff35b682de818",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0773ff35b682de818",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682396138567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kgk-PUBLIC"
            },
            "tags_all": {
              "Name": "kgk-PUBLIC"
            },
            "vpc_id": "vpc-0fd973cf4e435e155"
          },
          "dependencies": [
            "module.network-stack.aws_vpc.kgk-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network-stack",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kgk-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682396138567:vpc/vpc-0fd973cf4e435e155",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04d1b3f4eb864a354",
            "default_route_table_id": "rtb-0e60b0a9d22c65dca",
            "default_security_group_id": "sg-0fc6d2d9aea8c9571",
            "dhcp_options_id": "dopt-07254308ce85c76ae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fd973cf4e435e155",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e60b0a9d22c65dca",
            "owner_id": "682396138567",
            "tags": {
              "Name": "kgk-VPC"
            },
            "tags_all": {
              "Name": "kgk-VPC"
            }
          }
        }
      ]
    }
  ]
}